@@ -5,6 +5,7 @@
 - Properly handle NULL pixbufs in the toolbars code.
 - Make sure the ui-manager is up2date when creating the exo toolbar.
 - Fix possible segfault in exo_icon_view_get_item_at_pos (bug #5633).
+- Do not escape commas in urls (bug #5654).
 
 0.3.101
 =======
